# cameras

./: .gitignore  .prettierignore  AGENTS.md  AMBIGUITIES.md  CHANGELOG.md  DEVELOPMENT.md  LESSONS_LEARNED.md  PROMPT.md  README.md  eslint.config.js  index.html  package.json  release-please-config.json  vite.config.ts
.chainlink/: hook-config.json  issues.db
.chainlink/rules/: c.md  cpp.md  csharp.md  elixir-phoenix.md  elixir.md  global.md  go.md  java.md  javascript-react.md  javascript.md  kotlin.md  odin.md  php.md  project.md  python.md  ruby.md  rust.md  sanitize-patterns.txt  scala.md  swift.md  tracking-normal.md  tracking-strict.md  typescript-react.md  typescript.md  web.md  zig.md
.github/workflows/: build.yml  checks.yml  commit-lint.yml  lint-workflows.yml  release-please.yml  release.yml  update-snapshots.yml
.husky/: pre-commit
openspec/archive/vcam-file-backed-shm/: design.md  tasks.md
openspec/archive/vcam-msix-packaging/: design.md  proposal.md  smartscreen-research.md  tasks.md  virtual-camera-landscape-research.md
openspec/archive/vcam-shm-inversion/: design.md  tasks.md
openspec/changes/canon-edsdk-integration/: design.md  proposal.md  tasks.md
openspec/changes/canon-live-view-wiring/: CHANGE.md
openspec/changes/diagnostics-dashboard/: design.md  proposal.md  tasks.md
openspec/changes/gcs-canon-sdk/: SPEC.md
openspec/changes/gpu-canon-hotplug/: design.md  proposal.md  tasks.md
openspec/changes/self-testing-machine/: CHANGE.md
openspec/changes/sidebar-canon-vcam/: design.md  proposal.md
openspec/changes/tray-context-menu/: design.md  proposal.md  tasks.md
openspec/changes/webcam-settings-manager/: design.md  proposal.md  tasks.md
scripts/: build-msix.ps1  create-dev-cert.ps1  dev-harness.sh  register-vcam-dev.ps1  verify-logs.sh
src/: App.css  App.test.tsx  App.tsx  Root.test.tsx  Root.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  cameras.exe.manifest  nsis-hooks.nsh  tauri.canon-linux.conf.json  tauri.canon-macos.conf.json  tauri.canon-windows.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/vcam-shared/: Cargo.toml
src-tauri/crates/vcam-shared/src/: error.rs  lib.rs  owner.rs  producer.rs  reader.rs  ring_buffer.rs  writer.rs
src-tauri/crates/vcam-source/: Cargo.toml
src-tauri/crates/vcam-source/src/: activate.rs  class_factory.rs  com_exports.rs  lib.rs  media_source.rs  media_stream.rs  registry.rs  sample_factory.rs  trace.rs
src-tauri/crates/vcam-test/: Cargo.toml
src-tauri/crates/vcam-test/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/msix/: AppxManifest.xml
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/camera/: backend.rs  commands.rs  composite.rs  dummy.rs  error.rs  hotplug_bridge.rs  mod.rs  types.rs
src-tauri/src/camera/canon/: api.rs  backend.rs  controls.rs  discovery.rs  ffi.rs  hotplug.rs  live_view.rs  mock.rs  mod.rs  sdk.rs  types.rs
src-tauri/src/camera/platform/: mod.rs  windows.rs
src-tauri/src/diagnostics/: mod.rs  stats.rs
src-tauri/src/input/: mod.rs
src-tauri/src/integration/: mod.rs
src-tauri/src/pipeline/: mod.rs
src-tauri/src/preset/: mod.rs
src-tauri/src/preview/: capture.rs  commands.rs  compress.rs  encode_worker.rs  gpu.rs  graph.rs  mf_jpeg.rs  mod.rs
src-tauri/src/settings/: commands.rs  mod.rs  store.rs  types.rs
src-tauri/src/virtual_camera/: commands.rs  frame_pump.rs  linux.rs  mod.rs  nv12.rs  stub.rs  windows.rs
src/features/camera-sidebar/: CameraEntry.css  CameraEntry.test.tsx  CameraEntry.tsx  CameraSidebar.css  CameraSidebar.test.tsx  CameraSidebar.tsx  CameraSidebar.visual.test.tsx  EmptyState.test.tsx  EmptyState.tsx  EmptyState.visual.test.tsx  api.test.ts  api.ts  index.ts  preview-state-store.test.ts  preview-state-store.ts  store.test.ts  store.ts  useHotplug.test.ts  useHotplug.ts  virtual-camera-api.ts  virtual-camera-store.test.ts  virtual-camera-store.ts
src/features/controls/: AccordionSection.css  AccordionSection.test.tsx  AccordionSection.tsx  ConfirmModal.css  ConfirmModal.test.tsx  ConfirmModal.tsx  ControlRenderer.test.tsx  ControlRenderer.tsx  ControlSelect.css  ControlSelect.test.tsx  ControlSelect.tsx  ControlSlider.css  ControlSlider.test.tsx  ControlSlider.tsx  ControlSlider.visual.test.tsx  ControlToggle.css  ControlToggle.test.tsx  ControlToggle.tsx  ControlsPanel.css  ControlsPanel.test.tsx  ControlsPanel.tsx  ControlsPanel.visual.test.tsx  ResetAllButton.css  ResetAllButton.test.tsx  ResetAllButton.tsx  api.test.ts  api.ts  index.ts
src/features/notifications/: Toast.css  Toast.test.tsx  Toast.tsx  Toast.visual.test.tsx  ToastContainer.test.tsx  ToastContainer.tsx  index.ts  useToast.test.ts  useToast.ts
src/features/preview/: DiagnosticOverlay.css  DiagnosticOverlay.test.tsx  DiagnosticOverlay.tsx  PreviewCanvas.css  PreviewCanvas.test.tsx  PreviewCanvas.tsx  index.ts  useDiagnostics.test.ts  useDiagnostics.ts  usePreview.test.ts  usePreview.ts  useThumbnail.test.ts  useThumbnail.ts
src/features/settings/: GpuAdapterSelector.css  GpuAdapterSelector.test.tsx  GpuAdapterSelector.tsx  SettingsPage.css  SettingsPage.test.tsx  SettingsPage.tsx  ThemeContext.ts  ThemeProvider.test.tsx  ThemeProvider.tsx  theme.ts  (+4 more)
src/styles/: base.css  tokens.css  tokens.test.ts
src/test-utils/: visual.tsx
src/types/: camera.ts  gpu.ts
(+32 files in other folders)
