[package]
name = "cameras"
version = "0.1.0"
description = "Camera settings manager"
authors = ["Webber"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cameras_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = { version = "0.1", features = ["log-always"] }
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
fast_image_resize = "6"
parking_lot = "0.12"
base64 = "0.22"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Media_DirectShow",
    "Win32_Media_MediaFoundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Graphics_Gdi",
]

[lints.clippy]
all = { level = "deny", priority = -1 }
