[package]
name = "vcam-shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Shared memory IPC for virtual camera frame transport"

[dependencies]
thiserror = "2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]

[dev-dependencies]
tempfile = "3"

[lints.clippy]
all = { level = "deny", priority = -1 }
