[package]
name = "vcam-source"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "COM media source DLL for MF Virtual Camera"

[lib]
crate-type = ["cdylib"]

[dependencies]
vcam-shared = { path = "../vcam-shared" }

[target.'cfg(windows)'.dependencies]
windows-core = "0.62"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Ole",
]

[lints.clippy]
all = { level = "deny", priority = -1 }
