[package]
name = "vcam-test"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Standalone diagnostic binary for MF virtual camera COM interface testing"

[[bin]]
name = "vcam-test"
path = "src/main.rs"

[dependencies]
vcam-shared = { path = "../vcam-shared" }

[target.'cfg(windows)'.dependencies]
windows-core = "0.62"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
]

[lints.clippy]
all = { level = "deny", priority = -1 }
